tests/cases/standard-library/errors/source/std-source-map-after-reset.ari
// Ensures SourceMap storage cannot be used after its backing Zone is reset.
fn main() -> i64 {
  var zone = zone::create(256);
  var map = source::source_map(ref mut zone, 1);
  let id = map.add(ref mut zone, "hello\n");

  zone::reset(ref mut zone);

  return map.file(id).len();
}
